--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.10.5"
+    "@astrojs/react": "^2.2.1",
+    "@astrojs/rss": "^2.4.4",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "astro": "^2.10.5",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   }
 }
